# Compilation options

option('cassert', type: 'boolean', value: false,
       description: 'Turn on assertion checking in code')

option('evdns', type: 'boolean', value: true,
       description: 'Use libevent for DNS lookups (only used when c-ares is not available)')

option('root_ca_file', type: 'string', value: '',
       description: 'Path to the root CA certificates (empty = autodetect a system bundle)')

# External dependencies

option('cares', type: 'feature', value: 'auto',
       description: 'Build with c-ares support (preferred DNS backend when available)')

option('ldap', type: 'feature', value: 'auto',
       description: 'Build with LDAP authentication support')

option('pam', type: 'feature', value: 'auto',
       description: 'Build with PAM authentication support')

option('openssl', type: 'feature', value: 'auto',
       description: 'Build with OpenSSL (TLS) support')

option('systemd', type: 'feature', value: 'auto',
       description: 'Build with systemd support')
