# Compilation options

option('cassert', type: 'boolean', value: false,
       description: 'Turn on assertion checking in code')

# Test options

option('pytest', type: 'array', value: [],
       description: 'Command used to run the test suite (default: the pytest script if on PATH, else python -m pytest). Example: -Dpytest=python3,-m,pytest')

option('evdns', type: 'boolean', value: true,
       description: 'Use libevent for DNS lookups (only used when c-ares is not available)')

option('root_ca_file', type: 'string', value: '',
       description: 'Path to the root CA certificates (empty = autodetect a system bundle)')

# External dependencies

option('cares', type: 'feature', value: 'auto',
       description: 'Build with c-ares support (preferred DNS backend when available)')

# Off by default, matching autoconf where LDAP/PAM were opt-in (--with-ldap /
# --with-pam). Both spawn a background thread, whose stack valgrind reports as a
# "possibly lost" block, so auto-enabling them would break the valgrind job.
option('ldap', type: 'feature', value: 'disabled',
       description: 'Build with LDAP authentication support')

option('pam', type: 'feature', value: 'disabled',
       description: 'Build with PAM authentication support')

option('openssl', type: 'feature', value: 'auto',
       description: 'Build with OpenSSL (TLS) support')

option('systemd', type: 'feature', value: 'auto',
       description: 'Build with systemd support')
